--- a/css/main.scss
+++ b/css/main.scss
@@ -43,16 +43,20 @@ body {
     text-align: center;
     justify-content: center;
   }
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
 }
 
 // Light color settings
 body {
   color: black;
   background: #ffffff;
+
+  .hover-effect {
+    &:hover {
+      fill: black !important;
+      color: black !important;
+      filter: drop-shadow(2px 4px 6px black);
+    }
+  }
 }
 
 
@@ -60,4 +64,12 @@ body {
 body.dark {
   color: white;
   background: #4A4A4A;
+
+  .hover-effect {
+    &:hover {
+      fill: white !important;
+      color: white !important;
+      filter: drop-shadow(2px 4px 6px grey);
+    }
+  }
 }
