--- a/css/menu.scss
+++ b/css/menu.scss
@@ -33,12 +33,14 @@
         }
 
         .tab-group {
-            margin-left: auto;
             margin-top: auto;
             margin-bottom: auto;
             display: flex;
             column-gap: 5rem;
+            row-gap: 1rem;
             align-items: center;
+            flex-flow: wrap;
+            margin-left: 5rem;
             
             .tab {
                 font-size: 18px;
@@ -71,33 +73,15 @@
 // Light color settings
 body {
     .menu {
-        // border-bottom: #4e4e4e solid 1px;
         background: conic-gradient(from 180deg at 50% 49.73%, #E6C6FF 0deg, #F9F2FF 360deg);
         box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.7), 0px 5px 30px rgba(0, 0, 0, 0.3);
 
         .menu-content {
-            color: #585858;
-
-            .title {
+            .title, .tab-group .tab {
                 color: #585858;
             }
-
-            .tab-group {
-                .tab {
-                    color: #8C8C8C;
-                }
-            }
-
             .theme-icon svg {
                 fill: #585858;
-            }
-        }
-
-        a, .theme-icon svg {
-            &:hover {
-                fill: black !important;
-                color: black !important;
-                filter: drop-shadow(2px 4px 6px black);
             }
         }
     }
@@ -112,28 +96,11 @@ body.dark {
         background: linear-gradient(180deg, #00000059 0%, #0000007a 52.6%, #00000059 100%);
 
         .menu-content {
-            color: #8C8C8C;
-
-            .title {
+            .title, .tab-group .tab {
                 color: #8C8C8C;
             }
-
-            .tab-group {
-                .tab {
-                    color: #8C8C8C;
-                }
-            }
-
             .theme-icon svg {
                 fill: #8C8C8C;
-            }
-        }
-
-        a, .theme-icon svg {
-            &:hover {
-                fill: white !important;
-                color: white !important;
-                filter: drop-shadow(2px 4px 6px grey);
             }
         }
     }
